Add header banner and program area

--- a/index.html
+++ b/index.html
@@ -18,11 +18,96 @@
     href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap"
     rel="stylesheet"
   />
-  <link rel="stylesheet" href="script.js" />
+  <link href="http://fonts.cdnfonts.com/css/gotham" rel="stylesheet">
+  <link rel="stylesheet" href="style.css" />
     <title>Capstone Project</title>
 </head>
 <body>
-    
+<div class="wrapper">
+  <header class="header">
+    <a href="#" class="logo"><img src="./images/logo.png" alt="logo"></a>
+    <ul class="header_items_desktop">
+      <li class="home">Home</li>
+      <li class="about">About</li>
+      <li class="program">Program</li>
+      <li class="join">Join</li>
+      <li class="sponsor">Sponsor</li>
+      <li class="compain">C C Compain</li>
+    </ul>
+    <i class="fa fa-bars"></i>
+  </header>
+<div class="slide-bar_mobile">
+  <i class="fa fa-times"></i>
+  <ul class="header_items_mobile">
+    <li class="home"><a href="#"> Home</a></li>
+    <li class="about"><a href="#"> About</a> </li>
+    <li class="program"><a href="#"> Program</a> </li>
+    <li class="join"><a href="#"> Join</a> </li>
+    <li class="sponsor"><a href="#">Sponsor</a> </li>
+    <li class="compain"><a href="#"> C C Compain</a> </li>
+  </ul>
+</div>
+
+    <section class="banner-area">
+      <div class="greeting_title_banner">
+      <h2 class="greeting-banner-text">"Hello! Shareing world"</h2>
+      <h1 class="title-banner-text">CREATIVE COMMONS GLOBAL SUMMIT 2015</h1>
+      </div>
+      <div class="description-banner-text">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem iure at rem, voluptas omnis reiciendis saepe laborum accusamus ratione possimus nobis temporibus, ex similique sit nostrum odio repellat vero in! Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, mollitia. </p>
+      </div>
+      <div class="date_banner_text">
+        <h2 class="date_text">2022.10.15(Mon.)~ 16(Tue.)</h2>
+        <p class="date_conversion_banner">@Art museum of Korea, art center and more.</p>
+      </div>
+    </section>
+
+    <section class="program_area">
+      <div class="program-area-wrapper">
+        <div class="program-title-area">
+          <h2 class="program-title">Main program</h2>
+          <div class="program-line"></div>
+        </div>
+        <div class="parent-main-container">
+          <div class="main-program-card-container">
+            <div class="program-card">
+              <img src="./images/main_1.png" alt="topics">
+              <div class="program-title">Topics</div>
+              <div class="program-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis quibusdam ratione amet unde doloremque illum maiores quis illo eligendi reiciendis?</div>
+            </div>
+            <div class="program-card">
+              <img src="./images/main_2.png" alt="topics">
+              <div class="program-title">Topics</div>
+              <div class="program-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis quibusdam ratione amet unde doloremque illum maiores quis illo eligendi reiciendis?</div>
+            </div>
+            <div class="program-card">
+              <img src="./images/main_2.png" alt="topics">
+              <div class="program-title">Topics</div>
+              <div class="program-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis quibusdam ratione amet unde doloremque illum maiores quis illo eligendi reiciendis?</div>
+            </div>
+          </div>
+          <div class="main-program-card-container">
+            <div class="program-card">
+              <img src="./images/main_1.png" alt="topics">
+              <div class="program-title">Topics</div>
+              <div class="program-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis quibusdam ratione amet unde doloremque illum maiores quis illo eligendi reiciendis?</div>
+            </div>
+            <div class="program-card">
+              <img src="./images/main_2.png" alt="topics">
+              <div class="program-title">Topics</div>
+              <div class="program-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis quibusdam ratione amet unde doloremque illum maiores quis illo eligendi reiciendis?</div>
+            </div>
+            <div class="program-card">
+              <img src="./images/main_2.png" alt="topics">
+              <div class="program-title">Topics</div>
+              <div class="program-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis quibusdam ratione amet unde doloremque illum maiores quis illo eligendi reiciendis?</div>
+            </div>
+          </div>
+         </div>
+      </div>
+    </section>
+</div>
+
     <script src="script.js"></script>
 </body>
 </html>
