add speakers and footer section

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <section class="banner-area">
       <div class="greeting_title_banner">
       <h2 class="greeting-banner-text">"Hello! Shareing world"</h2>
-      <h1 class="title-banner-text">CREATIVE COMMONS GLOBAL SUMMIT 2015</h1>
+      <h1 class="title-banner-text">CREATIVE COMMONS GLOBAL SUMMIT <br> 2015</h1>
       </div>
       <div class="description-banner-text">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem iure at rem, voluptas omnis reiciendis saepe laborum accusamus ratione possimus nobis temporibus, ex similique sit nostrum odio repellat vero in! Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, mollitia. </p>
@@ -105,6 +105,38 @@
           </div>
          </div>
       </div>
+    </section>
+
+    <section class="speakers-area">
+      <div class="speakers-wrapper">
+        <div class="speakers-title">
+          <p class="speaker-heading">Featured speaker</p>
+          <div class="program-line"></div>
+        </div>
+        <div class="speaker-personality-container">
+
+        </div>
+      </div>
+    </section>
+    <section class="footer-area">
+      <footer class="footer">
+        <div class="footer-title">
+          <h2 class="footer-partner">Partner</h2>
+          <div class="program-line"></div>
+        </div>
+        <div class="sponsor-logos-container">
+          <div class="sponsor-logo">
+           <img src="./images/airbnb.svg" alt="Airbnb">
+            <img src="./images/amazon-png.png" alt="Amazon">
+            <img src="./images/facebook.svg" alt="facebook">
+          </div>
+          <div class="sponsor-logo">
+            <img src="./images/google.svg" alt="google">
+             <img src="./images/mozilla.svg" alt="mozilla">
+             <img src="https://www.logo.wine/a/logo/Binance/Binance-Vertical-White-Dark-Background-Logo.wine.svg" alt="Binance">
+           </div>
+        </div>
+      </footer>
     </section>
 </div>
 
