--- a/index.html
+++ b/index.html
@@ -25,22 +25,22 @@
 <body>
 <div class="wrapper">
   <header class="header">
-    <a href="#" class="logo"><img src="./images/logo.png" alt="logo"></a>
+    <a href="index.html" class="logo"><img src="./images/logo.png" alt="logo"></a>
     <ul class="header_items_desktop">
-      <li class="home">Home</li>
-      <li class="about">About</li>
-      <li class="program">Program</li>
-      <li class="join">Join</li>
-      <li class="sponsor">Sponsor</li>
-      <li class="compain">C C Compain</li>
+      <li class="home"><a href="index.html"> Home</a></li>
+      <li class="about"><a href="about.html"> About</a> </li>
+      <li class="program"><a href="#"> Program</a> </li>
+      <li class="join"><a href="#"> Join</a> </li>
+      <li class="sponsor"><a href="#">Sponsor</a> </li>
+      <li class="compain"><a href="#"> C C Compain</a> </li>
     </ul>
     <i class="fa fa-bars"></i>
   </header>
 <div class="slide-bar_mobile">
   <i class="fa fa-times"></i>
   <ul class="header_items_mobile">
-    <li class="home"><a href="#"> Home</a></li>
-    <li class="about"><a href="#"> About</a> </li>
+    <li class="home"><a href="index.html"> Home</a></li>
+    <li class="about"><a href="about.html"> About</a> </li>
     <li class="program"><a href="#"> Program</a> </li>
     <li class="join"><a href="#"> Join</a> </li>
     <li class="sponsor"><a href="#">Sponsor</a> </li>
