add conference events cards

--- a/about.html
+++ b/about.html
@@ -51,10 +51,10 @@
     <section class="banner-area banner-area-about">
       <div class="greeting_title_banner greeting_title_banner-about">
       <h2 class="greeting-banner-text">"Hello! Shareing world"</h2>
-      <h1 class="title-banner-text title-banner-text-about">CREATIVE COMMONS GLOBAL SUMMIT <br class="break"> 2015</h1>
+      <h1 class="title-banner-text-about">CREATIVE COMMONS GLOBAL SUMMIT <br class="break"> 2015</h1>
       <div class="program-line"></div>
       </div>
-      <div class="description-banner-text">
+      <div class="description-banner-text description-banner-text-about">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem iure at rem, voluptas omnis reiciendis saepe laborum accusamus ratione possimus nobis temporibus, ex similique sit nostrum odio repellat vero in! Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, mollitia. </p>
       </div>
       <div class="date_banner_text">
@@ -63,59 +63,47 @@
       </div>
     </section>
 
-    <section class="program_area">
+    <section class="conferences-events">
       <div class="program-area-wrapper">
         <div class="program-title-area">
           <h2 class="program-title">Main program</h2>
           <div class="program-line"></div>
         </div>
-        <div class="parent-main-container">
-          <div class="main-program-card-container">
-            <div class="program-card">
-              <img src="./images/main_1.png" alt="topics">
-              <div class="program-title">Topics</div>
-              <div class="program-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis quibusdam ratione amet unde doloremque illum maiores quis illo eligendi reiciendis?</div>
-            </div>
-            <div class="program-card">
-              <img src="./images/main_2.png" alt="topics">
-              <div class="program-title">Topics</div>
-              <div class="program-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis quibusdam ratione amet unde doloremque illum maiores quis illo eligendi reiciendis?</div>
-            </div>
-            <div class="program-card">
-              <img src="./images/main_2.png" alt="topics">
-              <div class="program-title">Topics</div>
-              <div class="program-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis quibusdam ratione amet unde doloremque illum maiores quis illo eligendi reiciendis?</div>
-            </div>
+        <div class="conference-wrapper">
+          <div class="events-section">
+            <p class="event-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, placeat. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error, autem?</p>
+            <img src="./images/girlsintech.jpg" alt="girlsintech">
           </div>
-          <div class="main-program-card-container">
-            <div class="program-card">
-              <img src="./images/main_1.png" alt="topics">
-              <div class="program-title">Topics</div>
-              <div class="program-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis quibusdam ratione amet unde doloremque illum maiores quis illo eligendi reiciendis?</div>
-            </div>
-            <div class="program-card">
-              <img src="./images/main_2.png" alt="topics">
-              <div class="program-title">Topics</div>
-              <div class="program-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis quibusdam ratione amet unde doloremque illum maiores quis illo eligendi reiciendis?</div>
-            </div>
-            <div class="program-card">
-              <img src="./images/main_2.png" alt="topics">
-              <div class="program-title">Topics</div>
-              <div class="program-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis quibusdam ratione amet unde doloremque illum maiores quis illo eligendi reiciendis?</div>
-            </div>
+          <div class="events-section">
+            <p class="event-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, placeat. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error, autem?</p>
+            <img src="./images/girlsintech.jpg" alt="girlsintech">
           </div>
-         </div>
+        </div>
+
       </div>
     </section>
 
     <section class="speakers-area">
       <div class="speakers-wrapper">
         <div class="speakers-title">
-          <p class="speaker-heading">Featured speaker</p>
+          <h2 class="speaker-heading">Future Conference Events</h2>
           <div class="program-line"></div>
         </div>
-        <div class="speaker-personality-container">
-
+        <div class="future-events-container">
+          <div class="event-card-container">
+            <img src="./images/girlsintech.jpg" alt="girlsintech">
+            <div class="event-card-description">
+              <h5 class="event-year">2020</h5>
+              <p class="event-location">Live on zoom</p>
+            </div> 
+          </div>
+          <div class="event-card-container">
+            <img src="./images/girlsintech.jpg" alt="girlsintech">
+            <div class="event-card-description">
+              <h5 class="event-year">2020</h5>
+              <p class="event-location">Live on zoom</p>
+            </div> 
+          </div>
         </div>
       </div>
     </section>
