add events, style about.html

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <section class="speakers-area">
       <div class="speakers-wrapper">
         <div class="speakers-title">
-          <p class="speaker-heading">Featured speaker</p>
+          <h2 class="speaker-heading">Featured speaker</h2>
           <div class="program-line"></div>
         </div>
         <div class="speaker-personality-container">
