add compain link class

--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
       <li class="program"><a href="#"> Program</a> </li>
       <li class="join"><a href="#"> Join</a> </li>
       <li class="sponsor"><a href="#">Sponsor</a> </li>
-      <li class="compain"><a href="#"> C C Compain</a> </li>
+      <li class="compain"><a href="#" class="compain-link"> C C Compain</a> </li>
     </ul>
     <i class="fa fa-bars"></i>
   </header>
@@ -51,7 +51,7 @@
     <section class="banner-area banner-area-about">
       <div class="greeting_title_banner greeting_title_banner-about">
       <h2 class="greeting-banner-text">"Hello! Shareing world"</h2>
-      <h1 class="title-banner-text-about">CREATIVE COMMONS GLOBAL SUMMIT <br class="break"> 2015</h1>
+      <h1 class="title-banner-text-about">INTERNATIONAL GIRLS <br> INTECH  CONFERENCE <br> 2022</h1>
       <div class="program-line"></div>
       </div>
       <div class="description-banner-text description-banner-text-about">
