change banner text

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <li class="program"><a href="#"> Program</a> </li>
       <li class="join"><a href="#"> Join</a> </li>
       <li class="sponsor"><a href="#">Sponsor</a> </li>
-      <li class="compain"><a href="#"> C C Compain</a> </li>
+      <li class="compain"><a href="#" class="compain-link"> C C Compain</a> </li>
     </ul>
     <i class="fa fa-bars"></i>
   </header>
@@ -51,7 +51,7 @@
     <section class="banner-area">
       <div class="greeting_title_banner">
       <h2 class="greeting-banner-text">"Hello! Shareing world"</h2>
-      <h1 class="title-banner-text">CREATIVE COMMONS GLOBAL SUMMIT <br> 2015</h1>
+      <h1 class="title-banner-text">INTERNATIONAL GIRLS <br> INTECH  CONFERENCE <br> 2022</h1>
       </div>
       <div class="description-banner-text">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem iure at rem, voluptas omnis reiciendis saepe laborum accusamus ratione possimus nobis temporibus, ex similique sit nostrum odio repellat vero in! Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, mollitia. </p>
