--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
       <h1 class="title-banner-text">INTERNATIONAL GIRLS <br> INTECH  CONFERENCE <br> 2022</h1>
       </div>
       <div class="description-banner-text">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem iure at rem, voluptas omnis reiciendis saepe laborum accusamus ratione possimus nobis temporibus, ex similique sit nostrum odio repellat vero in! Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, mollitia. </p>
+        <p>At our highly anticipated annual Conference you’ll learn something new, be empowered to drive change in the industry, and make exciting connections. Whatever you do and wherever you’re at, there’s a place for you at The Girls in Tech Conference.</p>
       </div>
       <div class="date_banner_text">
-        <h2 class="date_text">2022.10.15(Mon.)~ 16(Tue.)</h2>
-        <p class="date_conversion_banner">@Art museum of Korea, art center and more.</p>
+        <h2 class="date_text">2022.05.24(Wed.)~ 16(Fri.)</h2>
+        <p class="date_conversion_banner">@Technology house, NewYork, USA.</p>
       </div>
     </section>
 
@@ -73,17 +73,17 @@
             <div class="program-card">
               <img src="./images/main_1.png" alt="topics">
               <div class="program-title">Topics</div>
-              <div class="program-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis quibusdam ratione amet unde doloremque illum maiores quis illo eligendi reiciendis?</div>
+              <div class="program-description">Let our motivational keynotes, workshops and presentations help prepare you for any challenge. Our hand-picked selection of speakers have inspiring stories to share.</div>
             </div>
             <div class="program-card">
               <img src="./images/main_2.png" alt="topics">
-              <div class="program-title">Topics</div>
-              <div class="program-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis quibusdam ratione amet unde doloremque illum maiores quis illo eligendi reiciendis?</div>
+              <div class="program-title">Important notes</div>
+              <div class="program-description">Hear motivational quotes, workshops and presentations help prepare you for any challenge. Our hand-picked selection of speakers have inspiring stories to share.</div>
             </div>
             <div class="program-card">
-              <img src="./images/main_2.png" alt="topics">
-              <div class="program-title">Topics</div>
-              <div class="program-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis quibusdam ratione amet unde doloremque illum maiores quis illo eligendi reiciendis?</div>
+              <img src="./images/main_3.png" alt="topics">
+              <div class="program-title">Messages</div>
+              <div class="program-description">Messages on the most programming languages to learn are shared by different speakers. Get a change to hear success stories of many girls in tech.</div>
             </div>
           </div>
           <div class="main-program-card-container">
@@ -138,6 +138,7 @@
         </div>
       </footer>
     </section>
+
 </div>
 
     <script src="script.js"></script>
