--- a/about.html
+++ b/about.html
@@ -25,14 +25,14 @@
 <body>
 <div class="wrapper">
   <header class="header">
-    <a href="index.html" class="logo"><img src="./images/logo.png" alt="logo"></a>
+    <a href="index.html" class="logo"><img src="./images/logoweb.PNG" alt="logo"></a>
     <ul class="header_items_desktop">
       <li class="home"><a href="index.html"> Home</a></li>
       <li class="about"><a href="about.html"> About</a> </li>
       <li class="program"><a href="#"> Program</a> </li>
       <li class="join"><a href="#"> Join</a> </li>
       <li class="sponsor"><a href="#">Sponsor</a> </li>
-      <li class="compain"><a href="#" class="compain-link"> C C Compain</a> </li>
+      <li class="compain"><a href="#" class="compain-link"> Tickets</a> </li>
     </ul>
     <i class="fa fa-bars"></i>
   </header>
@@ -44,39 +44,40 @@
     <li class="program"><a href="#"> Program</a> </li>
     <li class="join"><a href="#"> Join</a> </li>
     <li class="sponsor"><a href="#">Sponsor</a> </li>
-    <li class="compain"><a href="#"> C C Compain</a> </li>
+    <li class="compain"><a href="#"> Tickets</a> </li>
   </ul>
 </div>
 
     <section class="banner-area banner-area-about">
       <div class="greeting_title_banner greeting_title_banner-about">
-      <h2 class="greeting-banner-text">"Hello! Shareing world"</h2>
+      <h2 class="greeting-banner-text">"Hello! Sharing World"</h2>
       <h1 class="title-banner-text-about">INTERNATIONAL GIRLS <br> INTECH  CONFERENCE <br> 2022</h1>
       <div class="program-line"></div>
       </div>
       <div class="description-banner-text description-banner-text-about">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem iure at rem, voluptas omnis reiciendis saepe laborum accusamus ratione possimus nobis temporibus, ex similique sit nostrum odio repellat vero in! Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, mollitia. </p>
+        <p>Whether you are looking for an internship, graduate job or an experienced professional  looking for your next move, come and speak directly to recruiters and then have the chance to upload your CV and apply directly for open and live opportunities.  </p>
       </div>
       <div class="date_banner_text">
-        <h2 class="date_text">2022.10.15(Mon.)~ 16(Tue.)</h2>
-        <p class="date_conversion_banner">@Art museum of Korea, art center and more.</p>
+        <h2 class="date_text">2022.05.24(Wed.)~ 16(Fri.)</h2>
+        <p class="date_conversion_banner">@Technology house, NewYork, USA.</p>
       </div>
     </section>
 
     <section class="conferences-events">
       <div class="program-area-wrapper">
         <div class="program-title-area">
-          <h2 class="program-title">Main program</h2>
+          <h2 class="program-title">Past events</h2>
           <div class="program-line"></div>
         </div>
         <div class="conference-wrapper">
           <div class="events-section">
-            <p class="event-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, placeat. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error, autem?</p>
+            <p class="event-description"> It was a safest event to exchange ideas, network and lay the foundations for new fruitful connections. 
+            </p>
             <img src="./images/girlsintech.jpg" alt="girlsintech">
           </div>
           <div class="events-section">
-            <p class="event-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, placeat. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error, autem?</p>
-            <img src="./images/girlsintech.jpg" alt="girlsintech">
+            <p class="event-description">The girls had opportunity to learn about the most trending tech opportunities in the past event held online in 2020</p>
+            <img src="./images/about2.jpg" alt="girlsintech">
           </div>
         </div>
 
@@ -91,17 +92,17 @@
         </div>
         <div class="future-events-container">
           <div class="event-card-container">
-            <img src="./images/girlsintech.jpg" alt="girlsintech">
+            <img src="./images/future-conference1.jpg" alt="girlsintech">
             <div class="event-card-description">
-              <h5 class="event-year">2020</h5>
+              <h5 class="event-year">Black girls tech summit, 2022</h5>
               <p class="event-location">Live on zoom</p>
             </div> 
           </div>
           <div class="event-card-container">
-            <img src="./images/girlsintech.jpg" alt="girlsintech">
+            <img src="./images/conference2.jpg" alt="girlsintech">
             <div class="event-card-description">
-              <h5 class="event-year">2020</h5>
-              <p class="event-location">Live on zoom</p>
+              <h5 class="event-year">November 15, 2022</h5>
+              <p class="event-location">London Hall</p>
             </div> 
           </div>
         </div>
@@ -110,7 +111,7 @@
     <section class="footer-area">
       <footer class="footer">
         <div class="footer-title">
-          <h2 class="footer-partner">Partner</h2>
+          <h2 class="footer-partner">Sponsors and partners</h2>
           <div class="program-line"></div>
         </div>
         <div class="sponsor-logos-container">
