--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
 <body>
 <div class="wrapper">
   <header class="header">
-    <a href="index.html" class="logo"><img src="./images/logo.png" alt="logo"></a>
+    <a href="index.html" class="logo"><img src="./images/logoweb.PNG" alt="logo"></a>
     <ul class="header_items_desktop">
       <li class="home"><a href="index.html"> Home</a></li>
       <li class="about"><a href="about.html"> About</a> </li>
       <li class="program"><a href="#"> Program</a> </li>
       <li class="join"><a href="#"> Join</a> </li>
       <li class="sponsor"><a href="#">Sponsor</a> </li>
-      <li class="compain"><a href="#" class="compain-link"> C C Compain</a> </li>
+      <li class="compain"><a href="#" class="compain-link"> Tickets</a> </li>
     </ul>
     <i class="fa fa-bars"></i>
   </header>
@@ -44,13 +44,13 @@
     <li class="program"><a href="#"> Program</a> </li>
     <li class="join"><a href="#"> Join</a> </li>
     <li class="sponsor"><a href="#">Sponsor</a> </li>
-    <li class="compain"><a href="#"> C C Compain</a> </li>
+    <li class="compain"><a href="#"> Tickets</a> </li>
   </ul>
 </div>
 
     <section class="banner-area">
       <div class="greeting_title_banner">
-      <h2 class="greeting-banner-text">"Hello! Shareing world"</h2>
+      <h2 class="greeting-banner-text">"Hello! Sharing world"</h2>
       <h1 class="title-banner-text">INTERNATIONAL GIRLS <br> INTECH  CONFERENCE <br> 2022</h1>
       </div>
       <div class="description-banner-text">
@@ -88,19 +88,19 @@
           </div>
           <div class="main-program-card-container">
             <div class="program-card">
-              <img src="./images/main_1.png" alt="topics">
-              <div class="program-title">Topics</div>
-              <div class="program-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis quibusdam ratione amet unde doloremque illum maiores quis illo eligendi reiciendis?</div>
+              <img src="./images/main_4.png" alt="topics" class="program-image">
+              <div class="program-title">Board</div>
+              <div class="program-description">A one-day, in-person tech event for women. Find community, share your story, sharpen your skills and learn how to thrive in tech. We need you here.</div>
+            </div>
+            <div class="program-card">
+              <img src="./images/main_5.png" alt="topics">
+              <div class="program-title">Connections</div>
+              <div class="program-description">Be ready to meet other Queens from around the world. Last year we had 1450 women attend from 31 cities in 14 countries in Europe, Americas, Middle East, Asia and Africa. </div>
             </div>
             <div class="program-card">
               <img src="./images/main_2.png" alt="topics">
-              <div class="program-title">Topics</div>
-              <div class="program-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis quibusdam ratione amet unde doloremque illum maiores quis illo eligendi reiciendis?</div>
-            </div>
-            <div class="program-card">
-              <img src="./images/main_2.png" alt="topics">
-              <div class="program-title">Topics</div>
-              <div class="program-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis quibusdam ratione amet unde doloremque illum maiores quis illo eligendi reiciendis?</div>
+              <div class="program-title">Thought</div>
+              <div class="program-description">Make the best use of our sessions to support your learning and development, to ensure you keep up to date with key skills  and new + emerging themes. </div>
             </div>
           </div>
          </div>
