Add top information

--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
     <title>Capstone Project</title>
 </head>
 <body>
+  <div class="top-container">
+    <p class="developer">Developed by @Alpha</p>
+    <ul class="top-links">
+      <li><a href="#"> <i class="fa-brands fa-twitter"></i></a></li>
+      <li><a href="#"> <i class="fa-brands fa-linkedin"></i></a></li>
+      <li><a href="#"> English</a></li>
+      <li><a href="#"> My page</a></li>
+      <li><a href="#"> Logout</a></li>
+    </ul>
+  </div>
 <div class="wrapper">
   <header class="header">
     <a href="index.html" class="logo"><img src="./images/logoweb.PNG" alt="logo"></a>
