Add facebook icon

--- a/about.html
+++ b/about.html
@@ -26,8 +26,8 @@
   <div class="top-container">
     <p></p>
     <ul class="top-links">
+      <li><a href="#"> <i class="fa-brands fa-facebook"></i></a></li>
       <li><a href="#"> <i class="fa-brands fa-twitter"></i></a></li>
-      <li><a href="#"> <i class="fa-brands fa-linkedin"></i></a></li>
       <li><a href="#"> English</a></li>
       <li><a href="#"> My page</a></li>
       <li><a href="#"> Logout</a></li>
