--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <section class="footer-area">
       <footer class="footer">
         <div class="footer-title">
-          <h2 class="footer-partner">Partner</h2>
+          <h2 class="footer-partner">Sponsors and partners</h2>
           <div class="program-line"></div>
         </div>
         <div class="sponsor-logos-container">
