Change and add footer

--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
     <section class="banner-area banner-area-about">
       <div class="greeting_title_banner greeting_title_banner-about">
       <h2 class="greeting-banner-text">"Hello! Sharing World"</h2>
-      <h1 class="title-banner-text-about">INTERNATIONAL GIRLS <br> INTECH  CONFERENCE <br> 2022</h1>
+      <h1 class="title-banner-text-about">INTERNATIONAL GIRLS <br> INTECH  CONFERENCE <br class="break"> 2022</h1>
       <div class="program-line"></div>
       </div>
       <div class="description-banner-text description-banner-text-about">
@@ -99,35 +99,36 @@
         <div class="speakers-title">
           <h2 class="speaker-heading">Future Conference Events</h2>
           <div class="program-line"></div>
+          <p class="events-overview">The coming 2 events will be the greatest ever in history with great speakers.</p>
         </div>
         <div class="future-events-container">
           <div class="event-card-container">
             <img src="./images/future-conference1.jpg" alt="girlsintech">
             <div class="event-card-description">
-              <h5 class="event-year">Black girls tech summit, 2022</h5>
+              <h5 class="event-year">September, 2022</h5>
               <p class="event-location">Live on zoom</p>
             </div> 
           </div>
           <div class="event-card-container">
             <img src="./images/conference2.jpg" alt="girlsintech">
             <div class="event-card-description">
-              <h5 class="event-year">November 15, 2022</h5>
+              <h5 class="event-year">January, 2023</h5>
               <p class="event-location">London Hall</p>
             </div> 
           </div>
         </div>
       </div>
     </section>
-    <section class="footer-area">
-      <footer class="footer">
-        <div class="footer-title">
-          <h2 class="footer-partner">Sponsors and partners</h2>
+    <section class="partner-section">
+      <div class="partner-container">
+        <div class="partner-title">
+          <h2 class="partner-heading">Sponsors and partners</h2>
           <div class="program-line"></div>
         </div>
         <div class="sponsor-logos-container">
           <div class="sponsor-logo">
            <img src="./images/airbnb.svg" alt="Airbnb">
-            <img src="./images/amazon-png.png" alt="Amazon">
+            <img src="./images/amazon-png.png" alt="Amazon" class="amazon">
             <img src="./images/facebook.svg" alt="facebook">
           </div>
           <div class="sponsor-logo">
@@ -136,7 +137,7 @@
              <img src="https://www.logo.wine/a/logo/Binance/Binance-Vertical-White-Dark-Background-Logo.wine.svg" alt="Binance">
            </div>
         </div>
-      </footer>
+      </div>
     </section>
 </div>
 
