--- a/index.html
+++ b/index.html
@@ -128,16 +128,16 @@
         </div>
       </div>
     </section>
-    <section class="footer-area">
-      <footer class="footer">
-        <div class="footer-title">
-          <h2 class="footer-partner">Sponsors and partners</h2>
+    <section class="partner-section">
+      <div class="partner-container">
+        <div class="partner-title">
+          <h2 class="partner-heading">Sponsors and partners</h2>
           <div class="program-line"></div>
         </div>
         <div class="sponsor-logos-container">
           <div class="sponsor-logo">
            <img src="./images/airbnb.svg" alt="Airbnb">
-            <img src="./images/amazon-png.png" alt="Amazon">
+            <img src="./images/amazon-png.png" alt="Amazon" class="amazon">
             <img src="./images/facebook.svg" alt="facebook">
           </div>
           <div class="sponsor-logo">
@@ -146,8 +146,19 @@
              <img src="https://www.logo.wine/a/logo/Binance/Binance-Vertical-White-Dark-Background-Logo.wine.svg" alt="Binance">
            </div>
         </div>
-      </footer>
+      </div>
     </section>
+    <footer class="footer">
+      <div class="footer-wrapper">
+        <div class="left-footer-img-container">
+          <img src="./images/logoweb.PNG" alt="logo">
+        </div>
+      </div>
+      <div class="right-footer-holder">
+        <h5 class="rights">2022, Creative common. <br class="footer-break">Some rights reserved.</h5>
+        <p></p>
+      </div>
+    </footer>
 
 </div>
 
