--- a/about.html
+++ b/about.html
@@ -119,26 +119,17 @@
         </div>
       </div>
     </section>
-    <section class="partner-section">
-      <div class="partner-container">
-        <div class="partner-title">
-          <h2 class="partner-heading">Sponsors and partners</h2>
-          <div class="program-line"></div>
+    <footer class="footer">
+      <div class="footer-wrapper footer-wrapper-about">
+        <div class="left-footer-img-container">
+          <img src="./images/logoweb.PNG" alt="logo" class="footer-logo">
         </div>
-        <div class="sponsor-logos-container">
-          <div class="sponsor-logo">
-           <img src="./images/airbnb.svg" alt="Airbnb">
-            <img src="./images/amazon-png.png" alt="Amazon" class="amazon">
-            <img src="./images/facebook.svg" alt="facebook">
-          </div>
-          <div class="sponsor-logo">
-            <img src="./images/google.svg" alt="google">
-             <img src="./images/mozilla.svg" alt="mozilla">
-             <img src="https://www.logo.wine/a/logo/Binance/Binance-Vertical-White-Dark-Background-Logo.wine.svg" alt="Binance">
-           </div>
+        <div class="right-footer-holder">
+          <h5 class="rights">2022, Creative common. <br class="footer-break">Some rights reserved.</h5>
+          <p class="disclaimer">Disclaimer: This project has been created under creative commons lincensed. The project has been cloned and designed by @Alpha.</p>
         </div>
       </div>
-    </section>
+    </footer>
 </div>
 
     <script src="script.js"></script>
