--- a/index.html
+++ b/index.html
@@ -151,12 +151,12 @@
     <footer class="footer">
       <div class="footer-wrapper">
         <div class="left-footer-img-container">
-          <img src="./images/logoweb.PNG" alt="logo">
+          <img src="./images/logoweb.PNG" alt="logo" class="footer-logo">
         </div>
-      </div>
-      <div class="right-footer-holder">
-        <h5 class="rights">2022, Creative common. <br class="footer-break">Some rights reserved.</h5>
-        <p></p>
+        <div class="right-footer-holder">
+          <h5 class="rights">2022, Creative common. <br class="footer-break">Some rights reserved.</h5>
+          <p class="disclaimer">Disclaimer: This project has been created under creative commons lincensed. The project has been cloned and designed by @Alpha.</p>
+        </div>
       </div>
     </footer>
 
